@startuml

title __ENTITIES's Class Diagram__\n

  namespace Entities {
    class Entities.Board {
        - map : Tile[][]
        + Board()
        + getTile()
        + removeCounterFromTile()
        + render()
        + setCounterOnTile()
        + tick()
        - setMap()
    }
  }
  

  namespace Entities {
    abstract class Entities.Entity {
        # height : int
        # width : int
        # x : float
        # y : float
        + Entity()
        + Entity()
        + getX()
        + getY()
        {abstract} + render()
        + setX()
        + setY()
        {abstract} + tick()
    }
  }
  

  namespace Entities {
    class Players.PositionOnMap {
        + arr : int
        + tile : int
        + PositionOnMap()
        + PositionOnMap()
        + PositionOnMap()
        + setTile()
    }
  }
  

  Entities.Board -up-|> Entities.Entity
  Entities.Entity o-- ludogame.Handler : handler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
